# librge

./: .gitignore  CMakeLists.txt  Makefile  README.md  devlog.txt
include/librge/: keycodes.h  logger.h  music.h  rge.h  sound.h
media/images/actors/: ball.aseprite  opponent.aseprite  player.aseprite  player_paddle.aseprite
media/images/backgrounds/: night_sky.aseprite  scroll_test.aseprite  splash.aseprite
scripts/: rge.py
src/: camera2D.cpp  collisions.cpp  engine.cpp  fileio.cpp  keyboard.cpp  media.cpp  music.cpp  sound.cpp  systems.cpp
tests/: test_main.cpp
